filter works now

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -2,7 +2,7 @@
 
 <footer class="footer">
     <span class="text-left">
-        <a href="http://coreui.io">BioCU</a> © 2017. All Rights Reserved.
+        <a href="http://coreui.io">varPlus</a> © 2017. All Rights Reserved.
     </span>
     <span class="float-xs-right">
         Powered by <a href="http://coreui.io">Computer Engineering, Chulalongkorn University</a>
