--- a/templates/combine_gvcf/index.html
+++ b/templates/combine_gvcf/index.html
@@ -3,7 +3,7 @@
 
 {% block breadcrumb %}
     <ol class="breadcrumb">
-        <li class="breadcrumb-item">Combine GVCF</li>
+        <li class="breadcrumb-item">Common Variant</li>
         <li class="breadcrumb-menu">
             <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
                 <a class="btn btn-secondary" href="#"><i class="icon-settings"></i> &nbsp;Settings</a>
@@ -18,31 +18,42 @@
             {% csrf_token %}
             <div class="card-header"><strong>Combine GVCF Input Form</strong></div>
             <div class="card-block">
-                {# Input file 1 #}
-                <div class="form-group row">
-                    <label class="col-md-3 form-control-label" for="file-input">Input File 1</label>
-                    <div class="col-md-9">
-                        <input type="file" id="input-file1" name="file-input">
-                    </div>
-                </div>
-                {# Input file 2 #}
-                <div class="form-group row">
-                    <label class="col-md-3 form-control-label" for="file-input">Input File 2</label>
-                    <div class="col-md-9">
-                        <input type="file" id="input-file2" name="file-input">
-                    </div>
+
+                {# input file#}
+                {{ formset.management_form }}
+                <div id="form_set">
+                    {% for form in formset.forms %}
+                        <div style="display: none">{{ form }}</div>
+                        <table class='no_error'>
+                            <div class="form-group row">
+                                <label class="col-md-3 form-control-label" for="file-input">Input File:</label>
+                                <div class="col-md-9">
+                                    <input type="file" id="file-{{ form.input.html_name }}" name="file-input">
+                                </div>
+                            </div>
+                        </table>
+                    {% endfor %}
                 </div>
 
+                <input type="button" value="Add More" id="add_more" class="col-lg-offset-3 btn btn-sm btn-warning">
+                <div id="empty_form" style="display:none">
+                    <div style="display: none">{{ formset.empty_form.as_table }}</div>
+                    <table class='no_error'>
 
-                <div style="display: none">{% include 'snippets/normal_field.html' with element=form.input1 %}</div>
-                <div style="display: none">{% include 'snippets/normal_field.html' with element=form.input2 %}</div>
+                        <div class="form-group row">
+                            <label class="col-md-3 form-control-label" for="file-input">Input File:</label>
+                            <div class="col-md-9">
+                                <input type="file" id="file-{{ formset.empty_form.input.html_name }}" name="file-input">
+                            </div>
+                        </div>
+                    </table>
+                </div>
 
                 {% include 'snippets/normal_field.html' with element=form.output_name %}
             </div>
 
             <div class="card-footer">
                 <button type="submit" class="btn btn-sm btn-primary" id="submit"><i class="fa fa-dot-circle-o"></i> Submit</button>
-{#                <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Reset</button>#}
             </div>
         </form>
 
@@ -53,8 +64,16 @@
 {% block my-script %}
     <script type="text/javascript">
         document.getElementById("submit").onclick = function () {
-            document.getElementById("id_input1").value = document.getElementById("input-file1").value;
-            document.getElementById("id_input2").value = document.getElementById("input-file2").value;
+            total_form = $('#form_set').children().length;
+            for(var i = 0; i<total_form; i++)
+                document.getElementById("id_form-"+i+"-input").value = document.getElementById("file-form-"+i+"-input").value;
         };
+
+        $('#add_more').click(function() {
+            var form_idx = $('#id_form-TOTAL_FORMS').val();
+            $('#form_set').append($('#empty_form').html().replace(/__prefix__/g, form_idx));
+            $('#id_form-TOTAL_FORMS').val(parseInt(form_idx) + 1);
+        });
+
     </script>
 {% endblock %}
