--- a/templates/hiphive/output.html
+++ b/templates/hiphive/output.html
@@ -18,6 +18,7 @@
     <div class="card">
         <div class="card-header">
             <i class="fa fa-align-justify"></i> hiPhive Output
+            <button type="submit" class="btn btn-sm btn-primary pull-right">Export VCF</button>
         </div>
         <div class="card-block">
             <table class="table table-bordered fixed_headers">
@@ -45,7 +46,10 @@
                             <td style="max-width: 100px; min-width: 100px">{{ output.ref }}</td>
                             <td style="max-width: 100px; min-width: 100px">{{ output.alt }}</td>
                             <td style="max-width: 50px; min-width: 50px">{{ output.dp }}</td>
-                            <td style="max-width: 110px; min-width: 110px">{{ output.gene_name }}</td>
+                            <td style="max-width: 110px; min-width: 110px">
+                                <a href="http://www.genecards.org/cgi-bin/carddisp.pl?gene={{ output.gene_name }}">
+                                {{ output.gene_name }}</a>
+                            </td>
                             <td style="max-width: 90px; min-width: 90px">
                                 <span class="tag
                                         {% if output.gene_type == 'candidate' %}tag-success
