--- a/templates/hiphive/output.html
+++ b/templates/hiphive/output.html
@@ -18,7 +18,7 @@
     <div class="card">
         <div class="card-header">
             <i class="fa fa-align-justify"></i> hiPhive Output
-            <button type="submit" class="btn btn-sm btn-primary pull-right">Export VCF</button>
+            <a href="{% url 'hiphive:export' output_name=output_name %}" class="btn btn-sm btn-primary pull-right">Export VCF</a>
         </div>
         <div class="card-block">
             <table class="table table-bordered fixed_headers">
