--- a/templates/common_variant/index.html
+++ b/templates/common_variant/index.html
@@ -16,7 +16,7 @@
     <div class="card">
         <form action="{{ action }}" method="post">
             {% csrf_token %}
-            <div class="card-header"><strong>Combine GVCF Input Form</strong></div>
+            <div class="card-header"><strong>Common Variant Input Form</strong></div>
             <div class="card-block">
 
                 {# input file#}
