--- a/templates/common_variant/output.html
+++ b/templates/common_variant/output.html
@@ -3,7 +3,7 @@
 
 {% block breadcrumb %}
     <ol class="breadcrumb">
-        <li class="breadcrumb-item">Combine GVCF</li>
+        <li class="breadcrumb-item">Filter</li>
         <li class="breadcrumb-item active">Output</li>
         <li class="breadcrumb-menu">
             <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
