--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -5,27 +5,27 @@
         <ul class="nav">
 
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'filter:index' %}"><i class="icon-chemistry"></i> Filter </a>
+                <a class="nav-link" href="{% url 'filter:index' %}"> Filter </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'de_novo:index' %}"><i class="icon-chemistry"></i> De Novo </a>
+                <a class="nav-link" href="{% url 'de_novo:index' %}"> De Novo </a>
             </li>
 
             <li class="nav-item nav-dropdown">
-                <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-puzzle"></i> Exomizer</a>
+                <a class="nav-link nav-dropdown-toggle" href="#"> Exomizer</a>
                 <ul class="nav-dropdown-items">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'hiphive:index' %}"><i class="icon-chemistry"></i> hiPhive </a>
+                        <a class="nav-link" href="{% url 'hiphive:index' %}">&nbsp;&nbsp;&nbsp; &mdash; &nbsp; hiPhive </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'exomewalker:index' %}"><i class="icon-chemistry"></i> ExomeWalker </a>
+                        <a class="nav-link" href="{% url 'exomewalker:index' %}">&nbsp;&nbsp;&nbsp; &mdash; &nbsp; ExomeWalker </a>
                     </li>
                 </ul>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'combine_gvcf:index' %}"><i class="icon-chemistry"></i> Combine GVCF </a>
+                <a class="nav-link" href="{% url 'common_variant:index' %}"> Common Variant </a>
             </li>
 
         </ul>
