add targets, candidate form

--- a/templates/exomewalker/index.html
+++ b/templates/exomewalker/index.html
@@ -31,6 +31,8 @@
                     <div style="display: none">{% include 'snippets/normal_field.html' with element=form.input %}</div>
                     {% include 'snippets/normal_field.html' with element=form.entrez %}
                     {% include 'snippets/normal_field.html' with element=form.output_name %}
+                    {% include 'snippets/normal_field.html' with element=form.targets %}
+                    {% include 'snippets/normal_field.html' with element=form.candidates %}
 
                 </div>
 
