--- a/templates/hiphive/index.html
+++ b/templates/hiphive/index.html
@@ -30,6 +30,8 @@
                     <div style="display: none">{% include 'snippets/normal_field.html' with element=form.input %}</div>
                     {% include 'snippets/normal_field.html' with element=form.hpo %}
                     {% include 'snippets/normal_field.html' with element=form.output_name %}
+                    {% include 'snippets/normal_field.html' with element=form.targets %}
+                    {% include 'snippets/normal_field.html' with element=form.candidates %}
                     {{ form.non_field_errors }}
                 </div>
 
