common novel draft2

--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -28,6 +28,9 @@
                 <a class="nav-link" href="{% url 'common_variant:index' %}"> Common Variant </a>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'common_novel:index' %}"> Common Novel </a>
+            </li>
         </ul>
     </nav>
 </div>
